@@ -1,3 +1,8 @@
+2015-03-17  Alan Modra  <amodra@gmail.com>
+
+	* elf64-ppc.c (ppc64_elf_get_synthetic_symtab): Return count of 0
+	on nothing to do, before malloc of returned symbol array.
+
 2015-03-16  Nick Clifton  <nickc@redhat.com>
 
 	* elf32-rx.c (elf32_rx_relax_delete_bytes): If the relocs are not
